--- a/_posts/2024-08-22-java-class01.md
+++ b/_posts/2024-08-22-java-class01.md
@@ -131,4 +131,21 @@ public class Car {
 
 - 생성자 오버로딩 : 매개변수를 달리하는 생성자를 여러 개 선언
 
+#### 다른 생성자 호출
+
+```java
+Car(String model) {
+  this(model, "은색", 250);
+}
+
+Car(String model, String color, int maxSpeed) {
+  this.model = model;
+  this.color = color;
+  this.maxSpeed = maxSpeed;
+}
+```
+
+- this(매개값, ...)는 생성자의 첫 줄에 작성되며 다른 생성자를 호출하는 역할
+- 공통 코드를 한 생성자에만 집중적으로 작성하여 this()로 호출
+
 ---
