--- a/_posts/2024-08-29-java-class02.md
+++ b/_posts/2024-08-29-java-class02.md
@@ -8,7 +8,7 @@ categories: JAVA
 
 ### 8. 메소드 선언과 호출
 
-- 메소드 선언 : 객체의 동작을 실행 블록으로 정의하는 것   
+- 메소드 선언 : 객체의 동작을 실행 블록으로 정의하는 것
 - 메소드 호출 : 실행 블록을 실제로 실행하는 것
 
 #### 메소드 선언
@@ -142,7 +142,7 @@ static {
 - 내부에 인스턴스 필드나 메소드 사용 불가
 - this도 사용 불가
 
-※ 정적 메소드 및 블록에서 인스턴스 멤버를 사용하고 싶다면 객체를 먼저 생성하고 참조 변수로 접근해야 함(*main() 메소드도 정적 메소드*)
+※ 정적 메소드 및 블록에서 인스턴스 멤버를 사용하고 싶다면 객체를 먼저 생성하고 참조 변수로 접근해야 함(_main() 메소드도 정적 메소드_)
 
 ```java
 static void method3() {
@@ -155,3 +155,13 @@ static void method3() {
 ```
 
 ---
+
+### 11. final 필드와 상수
+
+#### final 필드 선언
+
+> final 필드 : 초기값 저장 시, 최종값이 되어 프로그램 실행 도중에 수정 불가
+
+```java
+final 타입 필드 [=초기값];
+```
