0920 날짜와 시간 완료

--- a/_posts/2024-09-08-java-util.md
+++ b/_posts/2024-09-08-java-util.md
@@ -164,6 +164,9 @@ public static void main(String[] args) {
     String key = iter.next();
     String value = map.get(key);
     System.out.println(key + " : " + value);
+
+    int a = 1;
+    int b = a;
   }
 }
 ```
