--- a/_posts/2024-09-09-java-date.md
+++ b/_posts/2024-09-09-java-date.md
@@ -51,10 +51,53 @@ public static void main(String[] args) {
     - GregorianCalendar는 Calendar의 자식 클래스   
     (새로운 형식의 표준 달력이 생성될 수 있으므로...)
 
+```java
+public static void main(String[] args) {
+    Calendar cal = Calendar.getInstance();
+    System.out.println(cal.get(Calendar.YEAR));
+    System.out.println(cal.get(Calendar.MONTH) + 1); //월은 0부터 시작함
+    System.out.println(cal.get(Calendar.DATE));
+    
+    System.out.println(cal.get(Calendar.HOUR)); //0~11시로 표시
+    System.out.println(cal.get(Calendar.HOUR_OF_DAY)); //0~24시로 표시
+    System.out.println(cal.get(Calendar.MINUTE));
 
+    cal.add(Calendar.HOUR, 5); //add메소드 이용하여 쉽게 날짜 계산 가능
+}
+```
 
 ---
 
 #### 3. java.time 패키지
+
+> Java에서 제공하는 Date, Time API는 부족한 기능 지원을 포함한 여러가지 문제점을 가지고 있었음   
+> JDK 코어에서 이런 문제점들을 해결하고 더 좋고 직관적인 API들을 제공하기 위해 새롭게 재 디자인한 Date, Time API를 Java SE 8부터 제공
+
+- of 메서드
+    - 오브젝트 자기 자신의 특정 요소를 가지고 오브젝트를 생성할 경우 호출
+- from 메서드
+    - 다른 타입으로 변경할 경우 호출
+
+```java
+public static void main(String[] args) {
+    LocalDateTime timePoint = LocalDateTime.now();
+    System.out.println(timePoint); //현재 날짜와 시간
+    
+    LocalDate ld1 = LocalDate.of(2012, Month.DECEMBER, 12);
+    System.out.println(ld1); //2012-12-12 날짜 객체 생성
+    
+    LocalTime lt1 = LocalTime.of(17, 18);
+    System.out.println(lt1); //17:18 시간 객체 생성
+    
+    LocalTime lt2 = LocalTime.parse("10:15:30");
+    System.out.println(lt2); //10:15:30 시간 객체 생성
+    
+    LocalDate theDate = timePoint.toLocalDate();
+    System.out.println(theDate); //2024-09-20 현재 날짜 출력
+    System.out.println(timePoint.getMonthValue()); //9 현재 월 출력(+1을 하지 않아도 제대로 된 월 출력)
+    System.out.println(timePoint.getMonth()); //SEPTEMBER 출력
+    System.out.println(timePoint.getHour()); //13 현재 시 출력
+}
+```
 
 ---
