--- a/_posts/2024-09-10-java-io.md
+++ b/_posts/2024-09-10-java-io.md
@@ -8,20 +8,212 @@ categories: JAVA
 
 #### 1. 자바IO
 
+> IO : 입출력을 위한 인터페이스와 클래스들
+
+- Byte 단위 입출력 클래스
+    - InputStream 추상 클래스
+    - OutputStream 추상 클래스
+- Char 단위 입출력 클래스
+    - Reader 추상 클래스
+    - Writer 추상 클래스
+- 장식대상 클래스 : 어디로부터, 어디에라는 대상을 지정할 수 있는 IO클래스
+    - 파일로부터 입력받고 쓰기 위한 클래스
+        - FileInputStream, FileOutputStream, FileReader, FileWriter
+    - 배열로부터 입력받고 쓰기 위한 클래스
+        - ByteArrayInputStream, ByteArrayOutputStream, CharReader, CharWriter
+- 장식하는 클래스 : 다양한 방식으로 입력하고, 출력하는 기능 제공
+    - DataInputStream, DataOutputStream : 다양한 데이터 형을 입력받고 출력
+    - PrintWriter : 다양하게 한 줄 출력하는 println() 메소드 가지고 있음
+    - BufferedReader : 한 줄 입력받는 readLine() 메소드 가지고 있음
+
+※ 데코레이터 패턴(Decorator Pattern) : 하나의 클래스를 장식하는 것처럼 생성자에서 감싸서 새로운 기능을 계속 추가할 수 있도록 클래스를 만드는 방식
+
 ---
 
 #### 2. Byte 단위 입출력
+
+> Byte단위 입출력 클래스는 클래스의 이름이 InputStream이나 OutputStream으로 끝남
+
+- 파일로부터 1byte씩 읽어들여 파일에 1byte씩 저장하는 프로그램을 작성
+    - 파일로부터 읽어오기 위한 객체 : FileInputStream
+    - 파일에 쓸 수 있게 해주는 객체 : FileOutputStream
+
+```java
+public static void main(String[] args) {
+    FileInputStream fis = null;
+    FileOutputStream fos = null;
+    
+    try {
+        fis = new FileInputStream("src/javaStudy/part13/exam01/ByteExam1.java");
+        fos = new FileOutputStream("byte.txt");
+        
+        int readData = -1;
+        while ((readData = fis.read()) != -1) {
+            fos.write(readData);
+        } //read() 메서드가 byte를 리턴한다면 끝을 나타내는 값을 표현할 수 없기 때문에 int 리턴, 음수의 경우 맨 좌측 비트가 1이 되며, 읽어들일 것이 있다면 항상 양수를 리턴함
+        
+    } catch (Exception e) {
+        e.printStackTrace();
+    } finally {
+        try {
+            fos.close();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        try {
+            fis.close();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
+##### [성능 향상 버전]
+
+```java
+public static void main(String[] args) {
+    long startTime = System.currentTimeMillis(); //메서드 시작 시간 구함
+    FileInputStream fis = null;
+    FileOutputStream fos = null;
+    
+    try {
+        fis = new FileInputStream("src/javaStudy/part13/exam01/ByteExam1.java");
+        fos = new FileOutputStream("byte.txt");
+        
+        int readCount = -1;
+        byte[] buffer = new byte[512];
+        while ((readCount = fis.read(buffer)) != -1) {
+            fos.write(buffer,0,readCount);
+        }
+        
+    } catch (Exception e) {
+        e.printStackTrace();
+    } finally {
+        try {
+            fos.close();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        try {
+            fis.close();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+    long endTime = System.currentTimeMillis();
+    System.out.println(endTime - startTime);
+}
+//1byte씩 읽는 경우 나머지 511byte를 버리게 됨 -> 512Byte만큼 읽어들이게 함으로써 성능 향상
+```
 
 ---
 
 #### 3. 다양한 타입의 출력
 
+> DataOutputStream
+
+- try-with-resources 블럭 선언
+    - close() 메서드를 사용자가 호출하지 않더라고, Exception이 발생하지 않았다면 자동으로 close()가 되게 할 수 있는 방법
+
+```java
+public static void main(String[] args) {
+    try (
+        DataOutputStream out = new DataOutputStream(new FileOutputStream("data.txt"));
+    ) {
+        out.writeInt(100); //정수값으로 저장 4Byte
+        out.writeBoolean(true); //boolean 값으로 저장 1Byte
+        out.writeDouble(50.5); //double 값으로 저장 8Byte
+    } catch (Exception e) {
+        e.printStackTrace();
+    }
+}
+```
+
 ---
 
 #### 4. 다양한 타입의 입력
 
+> DataInputStream   
+> data.dat로부터 값을 읽어들여 화면에 출력하는 클래스
+
+```java
+public static void main(String[] args) {
+    try (
+            DataInputStream in = new DataInputStream(new FileInputStream("data.txt"));
+            ) {
+        
+        //파일에 저장된 순서대로 읽어 들여야 함
+        int i = in.readInt(); //정수를 읽어들이는 메서드
+        boolean b = in.readBoolean(); //boolean 값을 읽어들이는 메서드
+        double d = in.readDouble(); //double 값을 읽어들이는 메서드
+        
+        System.out.println(i);
+        System.out.println(b);
+        System.out.println(d);
+        
+    } catch (Exception e) {
+        e.printStackTrace();
+    }
+}
+```
+
 ---
 
 #### 5. Char 단위 입출력
+
+> char단위 입출력 클래스는 클래스 이름이 Reader나 Writer로 끝이 남
+
+```java
+public static void main(String[] args) {
+    BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+    
+    String line = null;
+    
+    try {
+        line = br.readLine();
+    } catch (IOException e) {
+        e.printStackTrace();
+    }
+    
+    //콘솔에 출력
+    System.out.println(line);
+
+}
+```
+
+- char 단위 입출력 클래스를 이용하여 키보드로부터 한 줄 입력 받아서 콘솔에 출력
+    - System.in : 키보드를 의미
+        - InputStream 타입이므로 InputStreamReader 클래스 이용
+    - BufferedReader : 한 줄씩 입력 받기위한 클래스
+
+##### [파일에 출력]
+
+```java
+public static void main(String[] args) {
+    BufferedReader br = null; //한 줄 읽어 들이기 위해서 BufferedReader 클래스 이용
+    PrintWriter pw = null; //편리하게 출력하기 위해서 PrintWriter 클래스 이용
+            
+    try {
+        br = new BufferedReader(new FileReader("src/javaStudy/part13/exam06/CharIOExam02.java")); //예외 처리
+        pw = new PrintWriter(new FileWriter("test.txt")); //filewriter 없이 printwriter만으로도 사용 가능
+        
+        String line = null;
+        
+        while ((line = br.readLine()) != null) {
+            pw.println(line);
+        } //readLine()메소드는 읽어낼 때 더 이상 읽어 들일 내용이 없을 때 null을 리턴
+    } catch (Exception e) {
+        e.printStackTrace();
+    } finally {
+        pw.close();
+        try {
+            br.close();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
 
 ---
