java.base 모듈 완료

--- a/_posts/2024-09-07-java-base.md
+++ b/_posts/2024-09-07-java-base.md
@@ -58,7 +58,7 @@ categories: JAVA
     } //원하는 문자열 출력
     ```
 
-##### 롬복 사용
+##### [롬복 사용]
 
 > Lombok : 개발자들이 즐겨 쓰는 자동 코드 생성 라이브러리
 
@@ -76,6 +76,9 @@ https://docs.oracle.com/javase/8/docs/api/ : 자바8 문법 참고
 ##### [System 클래스]
 
 > System 클래스 : 프로그램 종료, 키보드 입력, 콘솔 출력, 현재 시간 읽기, 시스템 프로퍼티 읽기 등이 가능
+
+- exit() : 프로그램 종료
+- currentTimeMillis(), nanoTime() : 현재 시각 읽기
 
 ##### [문자열 클래스]
 
@@ -116,7 +119,8 @@ public static void main(String[] args) {
 
 ##### [포장 클래스]
 
-> 기본 타입(byte, char, short, int, long 등)의 값을 갖는 객체 생성
+> 기본 타입(byte, char, short, int, long 등)의 값을 갖는 객체 생성   
+> Byte, Character, Short, Integer, Long 등
 
 - 박싱과 언박싱
 ```java
@@ -138,6 +142,8 @@ public static void main(String[] args) {
   System.out.println("result: " + result);
 }
 ```
+
+※ 문자열을 기본 타입 값으로 변환 -> Integer.parseInt() 등등
 
 ##### [수학 클래스]
 
@@ -178,7 +184,7 @@ public static void main(String[] args) {
 }
 ```
 
-> Calendar 클래스 : Date의 단점을 해결하고 등장한 클래스
+> Calendar 클래스 : Date의 단점을 해결하고 등장한 달력 클래스
 
 - Calendar 클래스 생성 방법
     - 추상 클래스
@@ -244,4 +250,237 @@ String result = df.format(1234567.89); //1,234,567.9
 SimpleDateFormat sdf = new SimpleDateFormat("yyyy년 MM월 dd일");
 String strDate = sdf.format(new Date()); //2024년 09월 02일
 ```
+
+---
+
+#### 3. 정규 표현식 클래스
+
+> 자바는 정규 표현식을 이용해서 문자열이 올바르게 구성되어 있는지 검증
+
+ex)
+```java
+(02|010)-\d{3,4}-\d{4} //02-123-1234 또는 010-1234-5678
+```
+```java
+\w+@\w+\.\w(\.\w+)? //white@naver.com
+```
+
+> Pattern 클래스 : 정규 표현식으로 문자열을 검증하는 matches() 메소드 제공
+
+```java
+public static void main(String[] args) {
+  String regExp = "(02|010)-\\d{3,4}-\\d{4}";
+  String data = "010-123-4567"; //일치
+  boolean result = Pattern.matches(regExp, data);
+  if(result) {
+    System.out.println("정규식과 일치합니다.");
+  } else {
+    System.out.println("정규식과 일치하지 않습니다.");
+  }
+  
+  regExp = "\\w+@\\w+\\.\\w+(\\.\\w+)?";
+  data = "angel@mycompanycom"; //일치X
+  result = Pattern.matches(regExp, data);
+  if(result) {
+    System.out.println("정규식과 일치합니다.");
+  } else {
+    System.out.println("정규식과 일치하지 않습니다.");
+  }
+}
+```
+
+---
+
+#### 4. 리플렉션
+
+> 메타 정보 : 패키지 정보, 타입 정보, 멤버(생성자, 필드, 메소드) 정보 등   
+> 리플렉션 : 메타 정보를 프로그램에서 읽고 수정하는 행위
+
+##### [패키지와 타입 정보 얻기]
+
+- Package getPackage() : 패키지 정보 읽기
+- String getSimpleName() : 패키지를 제외한 타입 이름
+- String getName() : 패키지를 포함한 전체 타입 이름
+
+```java
+public static void main(String[] args) {
+  //how1 - 클래스로부터 얻는 방법
+  Class clazz = Car.class;
+  
+  //how2 - 클래스로부터 얻는 방법
+  // Class clazz = Class.forName("ch12.sec11.exam01.Car");
+  
+  //how3 - 객체로부터 얻는 방법                  
+  // Car car = new Car();
+  // Class clazz = car.getClass();
+  
+  System.out.println("패키지: " + clazz.getPackage().getName());
+  System.out.println("클래스 간단 이름: " + clazz.getSimpleName());
+  System.out.println("클래스 전체 이름: " + clazz.getName());
+}
+```
+
+##### [멤버 정보 얻기]
+
+- Constructor[] getDeclaredConstructors() : 생성자 정보 읽기
+- Field[] getDeclaredFields() : 필드 정보 읽기
+- Method[] getDeclaredMethods() : 메소드 정보 읽기
+
+```java
+public class ReflectionExample {
+
+	public static void main(String[] args) {
+		Class clazz = Car.class;
+		System.out.println("[생성자 정보]");
+		Constructor[] constructors = clazz.getDeclaredConstructors();
+		for(Constructor constructor : constructors) {
+			System.out.print(constructor.getName() + "(");
+			Class[] parameters = constructor.getParameterTypes();
+			printParameters(parameters);
+			System.out.println(")");
+		}
+		System.out.println();
+		
+		System.out.println("[필드 정보]");
+		Field[] fields = clazz.getDeclaredFields();
+		for(Field field : fields) {
+			System.out.println(field.getType().getName() + " " + field.getName());
+		}
+		System.out.println();
+		
+		System.out.println("[메소드 정보]");
+		Method[] methods = clazz.getDeclaredMethods();
+		for(Method method : methods) {
+			System.out.print(method.getName() + "(");
+			Class[] parameters = method.getParameterTypes();
+			printParameters(parameters);
+			System.out.println(")");
+		}
+	}
+	
+	private static void printParameters(Class[] parameters) {
+		for(int i=0; i<parameters.length; i++) {
+			System.out.print(parameters[i].getName());
+			if(i<(parameters.length-1)) {
+				System.out.println(",");
+			}
+		}
+	} //생성자 및 메소드의 매개변수 정보를 출력
+
+}
+```
+
+##### [리소스 경로 얻기]
+
+- URL getResource(String name) : 리소스 파일의 URL 리턴
+- InputStream getResourceAsStream(String name) : 리소스 파일의 InputStream 리턴
+
+```java
+public class GetResourceExample {
+
+	public static void main(String[] args) {
+		Class clazz = Car.class;
+		
+		String photo1Path = clazz.getResource("photo01.jpg").getPath();
+		String photo2Path = clazz.getResource("images/photo02.jpg").getPath();
+		
+		System.out.println(photo1Path);
+		System.out.println(photo2Path);
+	}
+
+}
+```
+
+---
+
+#### 5. 어노테이션
+
+> 어노테이션(Annotation) : 코드에서 @으로 작성되는 요소      
+> 클래스 또는 인터페이스를 컴파일하거나 실행할 때 어떻게 처리해야 할 것인지를 알려주는 설정 정보
+
+- 어노테이션의 3가지 용도
+    1. 컴파일 시 사용하는 정보 전달 ex) @Override - 재정의
+    2. 빌드 툴이 코드를 자동으로 생성할 때 사용하는 정보 전달
+    3. 실행 시 특정 기능을 처리할 때 사용하는 정보 전달
+
+##### [어노테이션 타입 정의와 적용]
+
+```java
+//어노테이션 정의
+public @interface AnnotationName {
+}
+```
+```java
+//어노테이션 사용
+@AnnotationName
+```
+
+- 어노테이션은 속성을 가질 수 있음
+  - 속성은 타입과 이름으로 구성
+  - 속성의 기본값은 default 키워드로 지정 가능
+
+```java
+public @interface AnnotationName {
+  String prop1();
+  int prop2() default 1;
+}
+```
+```java
+@AnnotationName(prop1 = "값"); //기본값이 없으므로 반드시 기술
+@AnnotationName(prop1 = "값", prop2 = 3); //prop2 생략 가능
+```
+
+- 어노테이션은 기본 속성인 value 가질 수 있음
+
+```java
+public @interface AnnotationName {
+  String value();
+  int prop2() default 1;
+}
+```
+```java
+@AnnotationName("값"); //value 속성 가질 시에 값만 기술 가능
+@AnnotationName(value = "값", prop2 = 3); //다른 속성의 값과 동시 줄 경우 value도 언급
+```
+
+##### [어노테이션 적용 대상]
+
+> 어떤 대상에 설정 정보를 적용할 것인지 명시해야 함
+
+- TYPE, ANNOTATION_TYPE, FIELD, CONSTRUCTOR, METHOD, LOCAL_VARIABLE, PACKAGE
+
+```java
+@Target( { ElementType.TYPE, ElementType.FIELD, ElementType.METHOD } )
+public @interface AnnotaionName {
+}
+// 적용 대상 지정(클래스, 필드, 메소드 적용 가능 / 생성자 적용 불가)
+```
+```java
+@AnnotationName
+public class ClassName {
+  @AnnotationName
+  private String fieldName;
+
+  //@AnnotationName
+  public ClassName() { } //생성자 적용 불가능
+
+  @AnnotationName
+  public void methodName() { }
+}
+```
+
+##### [어노테이션 유지 정책]
+
+> @AnnotationName을 언제까지 유지할 것인지 지정하는 것 추가
+
+- SOURCE(컴파일할 때 적용), CLASS(메모리로 로딩할 때 적용), RUNTIME(실행할 때 적용)
+
+```java
+@Target( { ElementType.TYPE, ElementType.FIELD, ElementType.METHOD } )
+@Retention( RetentionPolicy.RUNTIME )
+public @interface AnnotaionName {
+}
+//실행 시에도 어노테이션 설정 정보를 이용할 수 있도록 runtime으로 지정
+```
+
 ---
