--- a/_posts/2024-09-07-java-base.md
+++ b/_posts/2024-09-07-java-base.md
@@ -13,9 +13,10 @@ categories: JAVA
   - 아무것도 상속받지 않으면 자동으로 Object를 상속
   - Object가 가지고 있는 메소드는 모든 클래스에서 다 사용할 수 있다는 것을 의미
 
-##### Object가 가진 주요 메소드
+##### [Object가 가진 주요 메소드]
 
-- equals() : 객체의 번지를 비교하고 결과를 리턴
+- equals() : 객체의 번지를 비교하고 boolean 값을 리턴
+
   - 메소드를 재정의하여 동등 비교용으로 사용(객체가 달라도 내부의 데이터가 같은지 비교)
 
     ```java
@@ -29,7 +30,7 @@ categories: JAVA
       //equals() 메소드 재정의
       @Override
       public boolean equals(Object obj) {
-        if(obj instanseof Member target) { 
+        if(obj instanseof Member target) {
           //obj가 Member 타입인지 검사하고 타입 변환 후 target 변수에 대입
           if(id.equals(target.id)) {
             //id 문자열이 같은지 비교
@@ -40,17 +41,53 @@ categories: JAVA
       }
     }
     ```
-- hashCode : 객체의 해시코드 값 반환
-  - 객체가 달라도 내부 데이터가 동일하다면 같은 정수값 리턴을 위해 객체의 데이터를 기준으로 재정의
+
+- hashCode() : 객체의 메모리 번지를 이용해서 해시코드 생성
+
+  - 객체마다 다른 정수값 리턴, 두 객체가 동등한지 비교할 때 사용
+  - 객체가 달라도 내부 데이터가 동일하다면 같은 정수값 리턴
+
     ```java
-    @Override
-    public int hashCode() {
-      int hashCode = no + name.hashCode();
-      return hashCode;
-    } //학생 번호와 이름 해시코드를 합한 새로운 해시코드 리턴(번호와 이름이 같으면 동일한 해시코드 출력)
+    //두 객체가 동등함을 비교할 때 hashCode(), equals() 메소드 같이 사용
+    public class Student {
+      private int no;
+      private String name;
+
+      public Student(int no, String name) {
+        this.no = no;
+        this.name = name;
+      }
+
+      public int getNo() {
+        return no;
+      }
+
+      public String getName() {
+        return name;
+      }
+
+      @Override
+      public int hashCode() {
+        int hashCode = no + name.hashCode();
+        return hashCode;
+      } //새로운 해시코드 리턴(1. 정수값 비교)
+
+      @Override
+      public boolean equals(Object obj) {
+        if (obj instanceof Student target) {
+          if (no == target.getNo() && name.equals(target.getName())) {
+            return true;
+          }
+        }
+        return false;
+      } //Student 객체 확인 후 학생 번호와 이름값 비교(2. true/false 리턴)
+    }
     ```
-- toString : 객체가 가진 값을 문자열로 반환
+
+- toString() : 객체의 문자 정보 리턴
+
   - '클래스명@16진수해시코드'로 구성된 문자열 리턴
+
     ```java
     @Override
     public String toString() {
@@ -62,14 +99,20 @@ categories: JAVA
 
 > Lombok : 개발자들이 즐겨 쓰는 자동 코드 생성 라이브러리
 
-- Getter, Setter hasCode(), equals(), toString() 메소드 자동 생성 가능
-- @Data -> @RequiredArgsConstructor, @Getter, @Setter, @EqualsAndHashCode, @ToString 어노테이션들이 합쳐진 것과 동일한 효과
+##### [롬복에서 사용가능한 어노테이션 종류]
+
+- @Data : @RequiredArgsConstructor, @Getter, @Setter, @EqualsAndHashCode, @ToString 어노테이션들이 합쳐진 것과 동일한 효과
+- @NoArgsConstructor : 기본(매개변수가 없는) 생성자 포함
+- AllArgsConstructor : 모든 필드를 초기화시키는 생성자 포함
+- @RequiredArgsConstructor : 기본적으로 매개변수가 없는 생성자 포함, 만약 final 또는 @NonNull이 붙은 필드가 있다면 이 필드만 초기화시키는 생성자 포함
+- @Getter : Getter 메소드 포함
+- @Setter : Setter 메소드 포함
+- @EqualsAndHashCode : equals(), hashCode() 메소드 포함
+- @ToString : toString() 메소드 포함
 
 ---
 
 #### 2. java.lang 패키지
-
-https://docs.oracle.com/javase/8/docs/api/ : 자바8 문법 참고
 
 > java.lang 패키지 : 자바는 기본적으로 다양한 패키지를 지원, 그중에서 가장 중요한 패키지
 
@@ -104,39 +147,42 @@ String str2 = new String(arr2, "EUC-KR");
 
 ```java
 public static void main(String[] args) {
-		String data = new StringBuilder()
-				.append("DEF")
-				.insert(0,"ABC")
-				.delete(3,4)
-				.toString();
-		System.out.println(data);
-		//메소드 체이닝 : 자기 자신의 메소드를 호출하여 자기 자신의 값을 바꿔나가는 것
-		}
+  String data = new StringBuilder()
+      .append("DEF")
+      .insert(0,"ABC")
+      .delete(3,4)
+      .toString();
+  System.out.println(data);
+  //메소드 체이닝 : 자기 자신의 메소드를 호출하여 자기 자신의 값을 바꿔나가는 것
+}
 ```
-** String에서는 + 연산보다는 StringBuilder를 사용해야 효율적인 코드임(문자열을 더할 때 내부에서는 StringBuilder 객체를 계속 만들어내므로 프로그래밍 속도 저하)
+
+\*\* String에서는 + 연산보다는 StringBuilder를 사용해야 효율적인 코드임(문자열을 더할 때 내부에서는 StringBuilder 객체를 계속 만들어내므로 프로그래밍 속도 저하)
 
 > StringTokenizer 클래스 : 여러 종류가 아닌 한 종류의 구분자만 있을 때 문자열을 분리
 
 ##### [포장 클래스]
 
-> 기본 타입(byte, char, short, int, long 등)의 값을 갖는 객체 생성   
+> 기본 타입(byte, char, short, int, long 등)의 값을 갖는 객체 생성  
 > Byte, Character, Short, Integer, Long 등
 
 - 박싱과 언박싱
+
 ```java
 Integer obj = 100; //박싱 : 기본 타입의 값을 포장 객체로 만드는 과정
 int value = obj; //언박싱 : 포장 객체에서 기본 타입의 값을 얻어내는 과정
 ```
+
 ```java
 public static void main(String[] args) {
   //Boxing
   Integer obj = 100;
   System.out.println("value: " + obj.intValue()); //Integer 객체 내부의 int 값 리턴
-  
+
   //Unboxing
   int value = obj;
   System.out.println("value: " + value);
-  
+
   //연산 시 Unboxing
   int result = obj + 100;
   System.out.println("result: " + result);
@@ -157,54 +203,58 @@ int num = (int) (Math.random() * n) + start;
 //random() 메소드는 double 타입이므로 start부터 시작하는 랜덤 정수를 만들기 위한 공식(형변환 필수)
 ```
 
+---
+
+#### 3. java.util 패키지
+
 ##### [날짜와 시간 클래스]
 
 > Date 클래스 : 날짜와 시간을 구하기 위한 클래스
 
 - 대부분의 생성자와 메소드가 Deprecated되어 있음
 - java.util.SimpleDateFormat 클래스 사용
-    - yyyy : 년, MM : 월, dd : 일
-    - hh : 시간, mm : 분, ss : 초, a : 오전/오후
-    - zzz : TimeZone(한국의 경우 KST)
+  - yyyy : 년, MM : 월, dd : 일
+  - hh : 시간, mm : 분, ss : 초, a : 오전/오후
+  - zzz : TimeZone(한국의 경우 KST)
 
 ```java
 public static void main(String[] args) {
-    Date date = new Date(); //현재 시간과 날짜 정보를 Date 인스턴스가 가지게 됨
-    System.out.println(date.toString());
-    
-    SimpleDateFormat ft = new SimpleDateFormat("yyyy.MM.dd 'at' hh:mm:ss a zzz");
-    System.out.println(ft.format(date));
-    
-    System.out.println(date.getTime()); //현재 시간을 Long값으로 구하는 방법
-    //System이 가지고 있는 메소드 이용
-    long today = System.currentTimeMillis();
-    System.out.println(today);
-    
-    System.out.println(today - date.getTime()); //시간으로 연산도 가능
+  Date date = new Date(); //현재 시간과 날짜 정보를 Date 인스턴스가 가지게 됨
+  System.out.println(date.toString());
+
+  SimpleDateFormat ft = new SimpleDateFormat("yyyy.MM.dd 'at' hh:mm:ss a zzz");
+  System.out.println(ft.format(date));
+
+  System.out.println(date.getTime()); //현재 시간을 Long값으로 구하는 방법
+  //System이 가지고 있는 메소드 이용 currentTimeMillis()
+  long today = System.currentTimeMillis();
+  System.out.println(today);
+
+  System.out.println(today - date.getTime()); //시간으로 연산도 가능
 }
 ```
 
 > Calendar 클래스 : Date의 단점을 해결하고 등장한 달력 클래스
 
 - Calendar 클래스 생성 방법
-    - 추상 클래스
-    - 인스턴스 생성 시 getInstance() 메소드 사용
-    - 내부적으로 java.util.GregorianCalendar 인스턴스 만들어 리턴
-    - GregorianCalendar는 Calendar의 자식 클래스   
+  - 추상 클래스
+  - 인스턴스 생성 시 getInstance() 메소드 사용
+  - 내부적으로 java.util.GregorianCalendar 인스턴스 만들어 리턴
+  - GregorianCalendar는 Calendar의 자식 클래스  
     (새로운 형식의 표준 달력이 생성될 수 있으므로...)
 
 ```java
 public static void main(String[] args) {
-    Calendar cal = Calendar.getInstance();
-    System.out.println(cal.get(Calendar.YEAR));
-    System.out.println(cal.get(Calendar.MONTH) + 1); //월은 0부터 시작함
-    System.out.println(cal.get(Calendar.DATE));
-    
-    System.out.println(cal.get(Calendar.HOUR)); //0~11시로 표시
-    System.out.println(cal.get(Calendar.HOUR_OF_DAY)); //0~24시로 표시
-    System.out.println(cal.get(Calendar.MINUTE));
+  Calendar cal = Calendar.getInstance();
+  System.out.println(cal.get(Calendar.YEAR));
+  System.out.println(cal.get(Calendar.MONTH) + 1); //월은 0부터 시작함
+  System.out.println(cal.get(Calendar.DATE));
 
-    cal.add(Calendar.HOUR, 5); //add메소드 이용하여 쉽게 날짜 계산 가능
+  System.out.println(cal.get(Calendar.HOUR)); //0~11시로 표시
+  System.out.println(cal.get(Calendar.HOUR_OF_DAY)); //0~24시로 표시
+  System.out.println(cal.get(Calendar.MINUTE));
+
+  cal.add(Calendar.HOUR, 5); //add 메소드 이용하여 쉽게 날짜 계산 가능
 }
 ```
 
@@ -215,13 +265,13 @@ public static void main(String[] args) {
   LocalDateTime now = LocalDateTime.now();
   DateTimeFormatter dtf = DateTimeFormatter.ofPattern("yyyy.MM.dd a HH:mm:ss");
   System.out.println("현재 시간: " + now.format(dtf));
-  
+
   LocalDateTime result1 = now.plusYears(1);
   System.out.println("1년 덧셈: " + result1.format(dtf));
-  
+
   LocalDateTime result2 = now.minusMonths(2);
   System.out.println("2월 뺄셈: " + result2.format(dtf));
-  
+
   LocalDateTime result3 = now.plusDays(7);
   System.out.println("7일 덧셈: " + result3.format(dtf));
 }
@@ -232,6 +282,10 @@ public static void main(String[] args) {
 ```java
 LocalDateTime target = LocalDateTime.of(year, month, dayOfMonth, hour, minute, second);
 ```
+
+---
+
+#### 4. java.text 패키지
 
 ##### [형식 클래스]
 
@@ -253,14 +307,16 @@ String strDate = sdf.format(new Date()); //2024년 09월 02일
 
 ---
 
-#### 3. 정규 표현식 클래스
+#### 5. 정규 표현식 클래스
 
 > 자바는 정규 표현식을 이용해서 문자열이 올바르게 구성되어 있는지 검증
 
 ex)
+
 ```java
 (02|010)-\d{3,4}-\d{4} //02-123-1234 또는 010-1234-5678
 ```
+
 ```java
 \w+@\w+\.\w(\.\w+)? //white@naver.com
 ```
@@ -277,7 +333,7 @@ public static void main(String[] args) {
   } else {
     System.out.println("정규식과 일치하지 않습니다.");
   }
-  
+
   regExp = "\\w+@\\w+\\.\\w+(\\.\\w+)?";
   data = "angel@mycompanycom"; //일치X
   result = Pattern.matches(regExp, data);
@@ -291,9 +347,9 @@ public static void main(String[] args) {
 
 ---
 
-#### 4. 리플렉션
+<!-- #### 6. 리플렉션
 
-> 메타 정보 : 패키지 정보, 타입 정보, 멤버(생성자, 필드, 메소드) 정보 등   
+> 메타 정보 : 패키지 정보, 타입 정보, 멤버(생성자, 필드, 메소드) 정보 등
 > 리플렉션 : 메타 정보를 프로그램에서 읽고 수정하는 행위
 
 ##### [패키지와 타입 정보 얻기]
@@ -306,14 +362,14 @@ public static void main(String[] args) {
 public static void main(String[] args) {
   //how1 - 클래스로부터 얻는 방법
   Class clazz = Car.class;
-  
+
   //how2 - 클래스로부터 얻는 방법
   // Class clazz = Class.forName("ch12.sec11.exam01.Car");
-  
-  //how3 - 객체로부터 얻는 방법                  
+
+  //how3 - 객체로부터 얻는 방법
   // Car car = new Car();
   // Class clazz = car.getClass();
-  
+
   System.out.println("패키지: " + clazz.getPackage().getName());
   System.out.println("클래스 간단 이름: " + clazz.getSimpleName());
   System.out.println("클래스 전체 이름: " + clazz.getName());
@@ -340,14 +396,14 @@ public class ReflectionExample {
 			System.out.println(")");
 		}
 		System.out.println();
-		
+
 		System.out.println("[필드 정보]");
 		Field[] fields = clazz.getDeclaredFields();
 		for(Field field : fields) {
 			System.out.println(field.getType().getName() + " " + field.getName());
 		}
 		System.out.println();
-		
+
 		System.out.println("[메소드 정보]");
 		Method[] methods = clazz.getDeclaredMethods();
 		for(Method method : methods) {
@@ -357,7 +413,7 @@ public class ReflectionExample {
 			System.out.println(")");
 		}
 	}
-	
+
 	private static void printParameters(Class[] parameters) {
 		for(int i=0; i<parameters.length; i++) {
 			System.out.print(parameters[i].getName());
@@ -380,28 +436,28 @@ public class GetResourceExample {
 
 	public static void main(String[] args) {
 		Class clazz = Car.class;
-		
+
 		String photo1Path = clazz.getResource("photo01.jpg").getPath();
 		String photo2Path = clazz.getResource("images/photo02.jpg").getPath();
-		
+
 		System.out.println(photo1Path);
 		System.out.println(photo2Path);
 	}
 
 }
-```
+``` -->
 
 ---
 
-#### 5. 어노테이션
+#### 7. 어노테이션
 
-> 어노테이션(Annotation) : 코드에서 @으로 작성되는 요소      
+> 어노테이션(Annotation) : 코드에서 @으로 작성되는 요소  
 > 클래스 또는 인터페이스를 컴파일하거나 실행할 때 어떻게 처리해야 할 것인지를 알려주는 설정 정보
 
 - 어노테이션의 3가지 용도
-    1. 컴파일 시 사용하는 정보 전달 ex) @Override - 재정의
-    2. 빌드 툴이 코드를 자동으로 생성할 때 사용하는 정보 전달
-    3. 실행 시 특정 기능을 처리할 때 사용하는 정보 전달
+  1. 컴파일 시 사용하는 정보 전달 ex) @Override - 재정의
+  2. 빌드 툴이 코드를 자동으로 생성할 때 사용하는 정보 전달
+  3. 실행 시 특정 기능을 처리할 때 사용하는 정보 전달
 
 ##### [어노테이션 타입 정의와 적용]
 
@@ -410,6 +466,7 @@ public class GetResourceExample {
 public @interface AnnotationName {
 }
 ```
+
 ```java
 //어노테이션 사용
 @AnnotationName
@@ -425,6 +482,7 @@ public @interface AnnotationName {
   int prop2() default 1;
 }
 ```
+
 ```java
 @AnnotationName(prop1 = "값"); //기본값이 없으므로 반드시 기술
 @AnnotationName(prop1 = "값", prop2 = 3); //prop2 생략 가능
@@ -438,12 +496,13 @@ public @interface AnnotationName {
   int prop2() default 1;
 }
 ```
+
 ```java
 @AnnotationName("값"); //value 속성 가질 시에 값만 기술 가능
 @AnnotationName(value = "값", prop2 = 3); //다른 속성의 값과 동시 줄 경우 value도 언급
 ```
 
-##### [어노테이션 적용 대상]
+<!-- ##### [어노테이션 적용 대상]
 
 > 어떤 대상에 설정 정보를 적용할 것인지 명시해야 함
 
@@ -455,6 +514,7 @@ public @interface AnnotaionName {
 }
 // 적용 대상 지정(클래스, 필드, 메소드 적용 가능 / 생성자 적용 불가)
 ```
+
 ```java
 @AnnotationName
 public class ClassName {
@@ -481,6 +541,6 @@ public class ClassName {
 public @interface AnnotaionName {
 }
 //실행 시에도 어노테이션 설정 정보를 이용할 수 있도록 runtime으로 지정
-```
+``` -->
 
 ---
