--- a/_posts/2024-09-07-java-base.md
+++ b/_posts/2024-09-07-java-base.md
@@ -347,7 +347,7 @@ public static void main(String[] args) {
 
 ---
 
-<!-- #### 6. 리플렉션
+#### 6. 리플렉션
 
 > 메타 정보 : 패키지 정보, 타입 정보, 멤버(생성자, 필드, 메소드) 정보 등
 > 리플렉션 : 메타 정보를 프로그램에서 읽고 수정하는 행위
@@ -445,7 +445,7 @@ public class GetResourceExample {
 	}
 
 }
-``` -->
+```
 
 ---
 
@@ -502,7 +502,7 @@ public @interface AnnotationName {
 @AnnotationName(value = "값", prop2 = 3); //다른 속성의 값과 동시 줄 경우 value도 언급
 ```
 
-<!-- ##### [어노테이션 적용 대상]
+##### [어노테이션 적용 대상]
 
 > 어떤 대상에 설정 정보를 적용할 것인지 명시해야 함
 
@@ -541,6 +541,6 @@ public class ClassName {
 public @interface AnnotaionName {
 }
 //실행 시에도 어노테이션 설정 정보를 이용할 수 있도록 runtime으로 지정
-``` -->
+```
 
 ---
